--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,13 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!-- Long Form string messages -->
+    <string name="com_msg">Welcome to the Committee page, below this message is a list of the committee members, along with their position and their contact email.</string>
+
+    <!-- Toast Messages -->
+    <string name="on_home">You are already on the Home page</string>
+    <string name="on_com">You are already on the Committee page</string>
+
     <!-- Names for menu items -->
     <string name="menu_home">Home</string>
     <string name="menu_timetable">Timetable</string>
@@ -13,4 +20,5 @@
     <string name="menu_committee">Committee</string>
     <string name="menu_facebook">Facebook</string>
     <string name="menu_about">About</string>
+    <string name="title_activity_committee">Committee</string>
 </resources>
