--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Activity and app names -->
     <string name="app_name">BroCon Companion</string>
+    <string name="title_activity_committee">Committee</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,6 +20,15 @@
     <!-- Image Descriptions -->
     <string name="desc_header">BroCon Font style</string>
 
+    <!-- Strings for timers -->
+    <string name="timer_w">Weeks</string>
+    <string name="timer_d">Days</string>
+    <string name="timer_h">Hours</string>
+    <string name="timer_m">Minutes</string>
+    <string name="timer_s">Seconds</string>
+    <string name="timer_0">0</string>
+    <string name="timer_blank"> </string>
+
     <!-- Names for menu items -->
     <string name="menu_home">Home</string>
     <string name="menu_timetable">Timetable</string>
@@ -27,5 +37,4 @@
     <string name="menu_committee">Committee</string>
     <string name="menu_facebook">Facebook</string>
     <string name="menu_about">About</string>
-    <string name="title_activity_committee">Committee</string>
 </resources>
