--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="menu_committee">Committee</string>
     <string name="menu_facebook">Facebook</string>
     <string name="menu_about">About</string>
+    <string name="title_activity_blank">blank</string>
 </resources>
